# EtheriumStorage

./: .dockerignore  .gitignore  API_DOCS.md  Dockerfile  README.md  docker-compose.yml  env_example  pyproject.toml
alembic/: env.py
alembic/versions/: 8971e16806db_.py  e620a5a785d6_.py
src/: main.py
src/apps/etherium_transaction/: models.py  repositories.py  routers.py  schemas.py  services.py
src/apps/etherium_transaction/models/: transaction.py
src/apps/etherium_transaction/repository/: transaction.py
src/apps/etherium_transaction/routers/: transaction.py
src/apps/etherium_transaction/schemas/: transaction.py
src/apps/etherium_transaction/services/: transaction.py
src/core/database/postgresql/: mixins.py  models.py  session.py
src/core/logger/: __init__.py  custom_logger.py
src/core/providers/web3_connector/: services.py
src/core/settings/: __init__.py  base_settings.py  infura_settings.py  postgres_settings.py  redis_settings.py
tests/: test_db.py
